--- a/renume/WebRenume.html
+++ b/renume/WebRenume.html
@@ -15,7 +15,7 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <title>[简历]郭玲怡-前端开发</title>
+    <title>[简历]郭玲怡</title>
     <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="static/css/typo.css">
     <link rel="stylesheet" href="static/css/font-awesome.min.css">
@@ -51,7 +51,7 @@
                 </section>
 
                 <h1 class="name">郭玲怡</h1>
-                <h4 class="info-job">前端开发 / 广东肇庆</h4>
+                <h4 class="info-job">广东肇庆</h4>
 
             </section>
 
